--- a/public/goalsets.html
+++ b/public/goalsets.html
@@ -1,4 +1,3 @@
-<div >
 	<div class="row new-goalset-container">
 		<form ng-submit="addGoalset()">
 	  	<input type="text" ng-model="newGoalset.title">
@@ -10,11 +9,8 @@
 		<div class="small-3 column">
 			<ul>
 				<li class="goalset-container" ng-repeat="goalset in goalsets">
-					<a ui-sref="goalsetList.goalset">{{ goalset.title }}</a>
+					<a href="#/goalsets/{{goalset.id}}">{{ goalset.title }}</a>
 				</li>
 			</ul>
 		</div>
-		<div ui-view class="large-9 column">
-		</div>
 	</div>
-</div>
