--- a/public/goalsets.html
+++ b/public/goalsets.html
@@ -1,9 +1,12 @@
 <div class="row">
-	<div class="small-3 column">
-		<ul>
-			<li class="goalset-container" ng-repeat="goalset in goalsets">
-				<a href="#/goalsets/{{goalset.id}}">{{ goalset.title }}</a>
-			</li>
-		</ul>
-	</div>
+  <div class="small-3 column">
+    <ul>
+      <li class="goalset-container" ng-repeat="goalset in goalsets">
+      	 <a ui-sref=".show({goalsetId: goalset.id})">{{goalset.title}}</a>
+      </li>
+    </ul>
+  </div>
+  <div class="small-9 column">
+  	<div ui-view></div>
+  </div>
 </div>
